# ds-mono-repo

./: .continue_config_example.yaml  .env_example  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  cleanup.sh  docker-compose-dev.yml  docker-compose-production.yml  docker-compose.yml  high_level_requirements.txt  host_projects.py  lint.sh  pyproject.toml  requirements.txt  requirements_m1.txt  requirements_ubuntu.txt  run.sh  set_cpu_limit.sh  setup.py  setup.sh  setup_filebeat.sh  watch_cpu_temp.sh
ds-core/: backup_postgres.sh  pyproject.toml  restore_postgres.sh
ds-core/deprecated/: dep_core_utils.py  dep_ml_utils.py
ds-core/ds_core/: db_connectors.py  ds_utils.py
ds-core/sklearn_workflow/: ml_imports.py  ml_utils.py
ds-core/sklearn_workflow/tests/: test_ml_workflow.py
projects/financial-elt/: .dockerignore  .gitignore  Dockerfile  README.md  backup_states.sh  entrypoint.sh  host.py  migrate_fmp_to_timescaledb.py  pyproject.toml  restore_states.sh  routes.py  run.sh  setup_timescale_db.py  utils.py  yfinance_column_change_detector.py
projects/financial-elt/dbt_financial/: dbt_project.yml  pyproject.toml
projects/financial-elt/dbt_financial/macros/: dedupe_prices.sql  generate_schema_name.sql
projects/financial-elt/dbt_financial/models/: schema.yml
projects/financial-elt/dbt_financial/models/financial_analytics/: corporate_actions.sql  earnings_calendar.sql  earnings_events.sql  gap_strategy_exclusions.sql
projects/financial-elt/dbt_financial/models/polygon/polygon_core/: ticker_map.sql
projects/financial-elt/dbt_financial/models/polygon_analytics/: polygon_balance_sheet.sql  polygon_cash_flow.sql  polygon_financials.sql  polygon_financials_filing_metadata.sql  polygon_income_statement.sql  polygon_ticker_map.sql  ticker_map.sql
projects/financial-elt/dbt_financial/models/yahoo_analytics/: yahoo_sec_filings.sql
projects/financial-elt/dbt_financial/models/yfinance/yahoo_core/: yahoo_sec_filings.sql
projects/financial-elt/dbt_financial/models/yfinance/yf_analytics/: yf_warren_buffet_stock_criteria_1d.sql
projects/financial-elt/financial_elt/: __init__.py  routes.py  setup_timescale_fmp.py  utils.py
projects/financial-elt/legacy/: append_rows.py  cloudbuild.yaml  migrate_bq_to_postgres.py  migrate_bq_to_postgres2.py  yfinance_column_change_detector.py
projects/financial-elt/legacy/feature_creation/: feature_creation_utils.py
projects/financial-elt/legacy/financials/: yf_financial_utils.py
projects/financial-elt/legacy/prices/: etl_price_utils.py  run_etl_prices.py
projects/financial-elt/tap-fmp/: meltano.yml
projects/financial-elt/tap-fred/: meltano.yml
projects/financial-elt/tap-polygon/: check_missing_dates.py  convert_csv_to_pq.py  fetch_polygon_flat_files.sh  meltano.yml
projects/financial-elt/tap-yahooquery/: logging.yaml  meltano.yml
projects/financial-elt/tap-yfinance/: .env_example  .gitignore  gcp_logging.py  meltano.yml
projects/financial-elt/tests/: speed_tests.md
projects/financial-strategies/backtest-engine/: pyproject.toml
projects/financial-strategies/backtest-engine/bt_engine/: __init__.py  central_loaders.py  engine.py  evaluators.py  execution.py  helpers.py
projects/financial-strategies/strategies/earnings_iv_crush/production/: config.yml  earnings_iv_crush_ib_async.py  earnings_iv_crush_official_ibapi.py  earnings_iv_crush_scanner.py  pyproject.toml  yfinance_iv_crush_scanner.py
projects/financial-strategies/strategies/gap_strategy/: gap_backtest_utils.py  pyproject.toml  run_gap_backtest_strategy.py
projects/financial-strategies/strategies/gap_strategy/vectorbt_backtest/: backtest.py  pyproject.toml
projects/financial_elt/: .dockerignore  .env_example  .gitignore  Dockerfile  README.md  cloud_build_example.sh  cloudbuild.yaml  config.ini  config_example.ini  config_example.yml  cronjob.txt  docker-compose.yml  host.py  host_financial_elt.py  memory_error_cronjob.sh  pyproject.toml  requirements.txt  routes.py  run.sh  setup.sh  setup_timescale_db.py  utils.py  yfinance_column_change_detector.py
projects/financial_elt/alpha_vantage/: av_example.py
projects/financial_elt/dbt_financial/: .gitignore  dbt_project.yml  pyproject.toml
projects/financial_elt/dbt_financial/models/: schema.yml
projects/financial_elt/dbt_financial/models/yfinance/: yf_balance_sheet.sql  yf_crypto_prices_1d.sql  yf_crypto_prices_1m.sql  yf_crypto_prices_2m.sql  yf_stock_prices_1m.sql  yf_stock_prices_5m.sql  yf_stock_prices_interpolated_1d.sql  yf_stock_prices_interpolated_1m.sql
projects/financial_elt/dbt_financial/models/yfinance/prices/: stock_prices_1m.sql  (+5 more)
projects/financial_elt/dbt_financial_elt/: dbt_project.yml
projects/financial_elt/dbt_financial_elt/models/: schema.yml  stock_prices_1m.sql
projects/financial_elt/feature_creation/: feature_creation_utils.py
projects/financial_elt/legacy/: append_rows.py  migrate_bq_to_postgres2.py
projects/financial_elt/legacy/feature_creation/: feature_creation_utils.py
projects/financial_elt/legacy/financials/: yf_financial_utils.py
projects/financial_elt/legacy/prices/: etl_price_utils.py
projects/financial_elt/tap-polygon/: .gitignore  check_missing_dates.py  convert_csv_to_pq.py  fetch_polygon_flat_files.sh  meltano.yml
projects/financial_elt/tap-yfinance/: gcp_logging.py  google.yaml  logging.yaml  meltano.yml
projects/financial_elt/yfinance/: README.md  cronjob.sh  populate_database.py  requirements.txt  yf_elt_stock_price_utils.py  yf_elt_utils.py  yfinance_elt_utils.py
projects/financial_elt/yfinance/.meltano/: analytics.json
projects/financial_elt/yfinance/financials/: yf_financial_utils.py
projects/financial_elt/yfinance/prices/: etl_price_utils.py  run_etl_prices.py
projects/financial_elt/yfinance/stock_prices/: etl_price_utils.py  etl_stock_price_utils.py  run_etl_prices.py  run_etl_stock_prices.py
projects/financial_elt/yfinance/tap-yfinance/: .dockerignore  .env_example  Dockerfile  config.ini  docker-compose.yml  gcp_logging.py  google.yaml  host.py  meltano.yml  pyproject.toml  routes.py  run.sh
(+221 files in other folders)
