[build-system]
requires = ["poetry-core>=1.0.0", "setuptools", "wheel"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ds_core"
version = "0.2.0"
description = ""
authors = ["Matt Elgazar <melgazar9@gmail.com>"]
readme = "README.md"
packages = [{include = "ds_core"}]

### Core Group --> Always Installed ###

[tool.poetry.dependencies]
python = "^3.11"
pyyaml = "^6.0.1"
setuptools = "^80.4.0"
flatten-json = "^0.1.14"
tqdm = "^4.66.2"


### DB Group ###
yagmail = "^0.15.293"
pandas = "^2.3.0"
polars = "^1.30.0"
sqlalchemy = "^2.0.41"
psycopg2 = "^2.9.10"

[tool.poetry.group.db]
optional = true

[tool.poetry.group.db.dependencies]
duckdb = "^1.3.0"
sqlalchemy = "^2.0.40"
psycopg2 = "^2.9.10"
yagmail = "^0.15.293"


### Data Manipulation Group ###

[tool.poetry.group.dm]
optional = true

[tool.poetry.group.dm.dependencies]
pandas = "^2.2.3"
numpy = "^2.0.0"
polars = "^1.29.0"


### ML Group ###

[tool.poetry.group.ml]
optional = true

[tool.poetry.group.ml.dependencies]
scikit-learn = "^1.4.1.post1"
catboost = "^1.2.2"
xgboost = "^2.0.3"
imbalanced-learn = "^0.12.0"
feature-engine = "^1.6.2"
category-encoders = "^2.6.3"
dill = "^0.3.8"
feather-format = "^0.4.1"


### Data Visualization Group ###

[tool.poetry.group.viz]
optional = true

[tool.poetry.group.viz.dependencies]
matplotlib = "^3.8.3"
plotly = "^5.19.0"
seaborn = "^0.13.2"


### Web Group ###

[tool.poetry.group.web]
optional = true

[tool.poetry.group.web.dependencies]
flask = "^3.0.2"
waitress = "^3.0.2"
apscheduler = "^3.11.0"


### Dev Group ###

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^25.1.0"}
autopep8 = "^2.3.2"


### External Group ###

[tool.poetry.group.external]
optional = true

[tool.poetry.group.external.dependencies]
kagglehub = "^0.3.11"

[tool.black]
line-length = 90
exclude = '''
(^|/)(
    \.meltano
  | .*venv
  | build
  | dist
  | site-packages
)
'''

[tool.pylint]
disable = "C0111"
max-line-length = 90
ignore = ".meltano,*/.meltano,.venv,*/venv,build,dist,site-packages,*/site-packages"

[tool.isort]
profile = "black"
known_third_party = ["meltano"]
skip = [".meltano", ".venv", "build", "dist", "site-packages"]
