[project]
name = "financial-elt"
version = "0.1.0"
description = "Financial ELT package for data extraction, transformation, and loading"
authors = [{name = "melgazar9", email = "melgazar9@gmail.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "apscheduler>=3.10.4",
    "flask>=3.0.0",
    "jinja2>=3.1.2",
    "pyyaml>=6.0.1",
    "waitress>=2.1.2",
    "werkzeug>=3.0.1",
    "pipx>=1.3.3",
    "psycopg2-binary>=2.9.10",
    "pandas>=2.2.3",
    "holidays>=0.72",
    "pyarrow>=20.0.0",
    "duckdb>=1.2.2",
    "sqlalchemy>=2.0.41",
    "polars>=1.30.0",
]

[project.scripts]
financial-elt = "host:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
