[tool.poetry]
name = "financial-elt"
version = "0.1.0"
description = ""
authors = ["melgazar9 <melgazar9@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
apscheduler = "^3.10.4"
flask = "^3.0.0"
google-cloud-logging = "^3.9.0"
gunicorn = "^21.2.0"
jinja2 = "^3.1.2"
pyyaml = "^6.0.1"
waitress = "^2.1.2"
werkzeug = "^3.0.1"
yagmail = "^0.15.293"
pipx = "^1.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
