[project]
name = "bt_engine"
version = "0.1.0"
description = "Backtesting engine for trading strategies"
authors = [{name = "melgazar9", email = "melgazar9@gmail.com"}]
requires-python = ">=3.11"
dependencies = [
    "ds_core @ file:///Users/melgazar9/code/github/personal/ds-mono-repo/ds-core/",
    "polars>=1.30.0",
    "sqlalchemy>=2.0.41"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []
