[tool.poetry]
name = "gap-strategy"
version = "0.1.0"
description = ""
authors = ["melgazar9 <melgazar9@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
pandas = ">=2.3.0,<3.0.0"
numpy = ">=2.3.0,<3.0.0"
bt_engine = { path = "../../../financial-strategies/backtest-engine", develop = true }
ds_core = { path = "../../../../ds-core/", develop = true }
psycopg2 = "^2.9.10"
polars = "^1.30.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
