[project]
name = "gap-strategy"
version = "0.1.0"
description = ""
authors = [{name = "melgazar9", email = "melgazar9@gmail.com"}]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.3.0,<3.0.0",
    "numpy>=2.3.0,<3.0.0",
    "bt_engine @ file:///Users/melgazar9/code/github/personal/ds-mono-repo/projects/financial-strategies/backtest-engine",
    "ds_core @ file:///Users/melgazar9/code/github/personal/ds-mono-repo/ds-core/",
    "psycopg2>=2.9.10",
    "polars>=1.30.0",
    "matplotlib>=3.10.3",
    "plotly>=6.1.2",
    "backoff>=2.2.1"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []
