[tool.poetry]
name = "earnings-iv-crush"
version = "0.0.1"
description = "Earnings IV Crush Strategy"
authors = ["Matt Elgazar <melgazar9@gmail.com>"]
readme = "README.md"
license = "Apache-2.0"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
ib-async = "^2.0.1"
pandas = "^2.3.1"
scipy = "^1.16.0"
yfinance = "^0.2.65"
