[tool.poetry]
name = "vectorbt-backtest"
version = "0.1.0"
description = "VectorBT backtesting strategies"
authors = ["melgazar9 <melgazar9@gmail.com>"]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.11,<4.0"
numpy = "^1.24.0,<2.0.0"
vectorbt = "^0.27.3"
bt_engine = { path = "../../../../financial-strategies/backtest-engine", develop = true }
ds_core = { path = "../../../../../ds-core/",  develop = true}
psycopg2 = "^2.9.10"
paramiko = "^3.5.1"
