[project]
name = "vectorbt-backtest"
version = "0.1.0"
description = "VectorBT backtesting strategies"
authors = [{name = "melgazar9", email = "melgazar9@gmail.com"}]
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24.0,<2.0.0",
    "vectorbt>=0.27.3",
    "bt_engine @ file:///Users/melgazar9/code/github/personal/ds-mono-repo/projects/financial-strategies/backtest-engine",
    "ds_core @ file:///Users/melgazar9/code/github/personal/ds-mono-repo/ds-core/",
    "psycopg2>=2.9.10",
    "paramiko>=3.5.1"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []
